# fanfaresimulator

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Fanfare.files  README.md  client.cpp  main.cpp  meson.build  server.cpp
CMake/: FindFluidsynth.cmake  FindPortaudio.cmake
common/: note.cpp  noteglobale.cpp  partition.cpp  partitionglobale.cpp
engine/: client.cpp  partition.cpp  server.cpp  state.cpp
gui/: InstrumentWindow.cpp  PupitreWindow.cpp  UsernameWindow.cpp  Utilisateur.cpp  Utilisateur.hpp  game_window.cpp  game_window.hpp  gui_note.cpp  gui_note.hpp  keyboard.cpp  music_line.cpp  music_line.h  music_line.hpp  note.cpp  note.hpp  testwindow.cpp  testwindow.hpp  ui.cpp
include/: InstrumentWindow.cpp  InstrumentWindow.hpp  PartitionPlayer.hpp  PupitreWindow.hpp  UsernameWindow.hpp  client.hpp  game_window.hpp  gui_note.hpp  instrument.cpp  instrument.hpp  keyboard.hpp  midi_handler.hpp  music_line.hpp  network_client.hpp  network_server.hpp  network_utils.hpp  note.hpp  noteglobale.hpp  partition.hpp  partitionglobale.hpp  pupitre.hpp  server.hpp  serverconnection.hpp  sound_player.h  sound_player.hpp  state.hpp  synthesizer.hpp  ui.cpp  ui.hpp
include/engine/: client.hpp  server.hpp  state.hpp
include/gui/: PupitreWindow.hpp  UsernameWindow.hpp  game_window.hpp  gui_note.hpp  music_line.hpp
include/network/: DelayEstimator.hpp  SendAfter.hpp  advertizer.hpp  client.hpp  discoverer.hpp  network.hpp  server.hpp  serverconnection.hpp
include/synth/: PartitionPlayer.hpp  instrument.hpp  midi_handler.hpp  note.hpp  noteglobale.hpp  partition.hpp  partitionglobale.hpp  pupitre.hpp  sound_player.hpp
midifile/: CMakeLists.txt
midifile/src-programs/: testmidi.cpp
network/: DelayEstimator.cpp  SendAfter.cpp  advertizer.cpp  client.cpp  discoverer.cpp  network.cpp  network_client.cpp  network_server.cpp  server.cpp  server.hpp  serverconnection.cpp
resources/: 1043236-Crescent_Moon_Dance_from_Hibike_Euphonium_v1.1__Last_updated_03072016_.mid  956386-Hibike_Euphonium_-_Ai_Wo_Mitsuketa_Basho_Piano.mid  Movie_Themes_-_Willie_Wonka_FIRST_LOOK.txt
synth/: Movie_Themes_-_Willie_Wonka_OBJECTIF_PART_LOOK.txt  PartitionPlayer.cpp  instrument.cpp  midi_handler.cpp  midi_handler.hpp  note.cpp  noteglobale.cpp  partition.cpp  partition.h  partitionglobale.cpp  pupitre.cpp  sound_player.cpp  synth.cpp  synthesizer.cpp  synthesizer.hpp
synth_final/: instrument.cpp  instrument.hpp  midi_handler.cpp  midi_handler.hpp  note.cpp  note.hpp  partition.cpp  partition.hpp  pupitre.cpp  pupitre.hpp  sound_player.cpp
